Fix save bug and update gradle stuff.